improves JavaDoc on public classes